# fastapi-init-cli

./: README.md  pyproject.toml
src/fastapi_init_cli/: main.py
tests/: test_main.py
