[tool.poetry]
name = "fastapi-init-cli"
version = "0.1.0"
description = "A CLI tool for initializing FastAPI projects"
authors = ["diicell"]
license = "MIT"
readme = "README.md"
packages = [{include = "fastapi_init_cli", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
typer = "^0.12.3"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fastapi-cli = "fastapi_init_cli.main:app"